<resources>
    <string name="app_name">Study Reminder</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="addTask">Add New Task</string>
    <string name="taskDescription">Description</string>
    <string name="taskTitle">Task Name</string>
    <string name="taskDueDate">Due Date</string>
    <string name="Subject">Subject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Subjects">Subjects</string>
    <string name="AddDelete">Add/Delete Subjects</string>
    <string name="Delete">Delete</string>
    <string name="SubName">Subject Name</string>
    <string name="update">Update</string>
    <string name="UpdateTask">Update Task</string>
    <string name="description">What needs to be done?</string>
    <string name="dueDate">Due Date (dd/mm)</string>
    <string name="RemindIn">Remind me in:</string>
    <string name="DelAllTasks">Delete All Tasks</string>
    <string name="DeleteSubjects">Delete Subjects</string>
    <string name="AddSubjects">Add Subjects</string>
    <string name="SubjectName">Subject Name</string>
    <string name="DeleteAll">Delete All</string>
    <string name="Feedback">Feedback</string>
    <string name="Share">Share</string>
    <string name="days">days</string>
    <string name="desc">What needs to be done?</string>
    <string name="nothing">Nothing to show</string>
    <string name="pressAdd">Press + to add new task</string>
    <string name=""></string>
    <string name=""></string>
    <string name=""></string>
    <string name=""></string>
<!--    <string name=""></string>-->
</resources>