<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/addTasktxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="50dp"
        android:text="@string/UpdateTask"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/descEntry2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addbtn2"
        android:layout_width="155dp"
        android:layout_height="57dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="136dp"
        android:text="Update"
        android:textAllCaps="false"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEntry2"
        />

    <EditText
        android:id="@+id/subjectEntry2"
        android:layout_width="228dp"
        android:layout_height="55dp"
        android:popupBackground="#5c5c5c"
        android:textAlignment="center"
        android:hint="@string/Subject"
        app:layout_constraintBottom_toTopOf="@+id/dateEntry2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/descEntry2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/subjectEntry2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/dateEntry2"
        android:layout_width="104dp"
        android:layout_height="47dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="125dp"
        android:ems="10"
        android:hint="@string/taskDueDate"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjectEntry2"
        />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="155dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:text="Delete"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addbtn2" />
</androidx.constraintlayout.widget.ConstraintLayout>


